
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {int release; } ;
typedef int FILE ;


 int EOF ;
 int dprintf (char*,char*) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fscanf (int *,char*,...) ;
 struct utsname get_kernel_version () ;
 int strcat (char*,int ) ;
 int strcmp (char*,char*) ;

unsigned long get_kernel_addr_sysmap() {
 FILE *f;
 unsigned long addr = 0;
 char path[512] = "/boot/System.map-";
 char version[32];

 struct utsname u;
 u = get_kernel_version();
 strcat(path, u.release);
 dprintf("[.] trying %s...\n", path);
 f = fopen(path, "r");
 if (f == ((void*)0)) {
  dprintf("[-] open/read(%s)\n", path);
  return 0;
 }

 char dummy;
 char sname[256];
 char* name = "startup_64";
 int ret = 0;
 while (ret != EOF) {
  ret = fscanf(f, "%p %c %s\n", (void **)&addr, &dummy, sname);
  if (ret == 0) {
   fscanf(f, "%s\n", sname);
   continue;
  }
  if (!strcmp(name, sname)) {
   fclose(f);
   return addr;
  }
 }

 fclose(f);
 dprintf("[-] kernel base not found in %s\n", path);
 return 0;
}
